--- a/.template.env
+++ b/.template.env
@@ -4,3 +4,7 @@ CLIENT_ID="CLIENT_ID"
 CLIENT_SECRET="CLIENT_SECRET"
 PORT=5173
 REFRESH_TOKEN="REFRESH_TOKEN"
+
+COLOR_PRIMARY="#7e9cd8"
+COLOR_WARNING="#ffcc00"
+COLOR_ERROR="#FF3333"
